# TMAU-2023

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  Lab1.cpp  [task1]kulick  readme.md  sonar-project.properties
.github/: pr-title-checker-config.json
.github/workflows/: build.yml  check_duplication.yml  pr-title-checker.yml
TMAU1/: TMAU1.sln
TMAU1/TMAU1/: TMAU1.cpp  TMAU1.vcxproj  TMAU1.vcxproj.filters
tasks/: readme.md
tasks/task_00/: readme.md
tasks/task_01/doc/: readme.md
tasks/task_01/src/: main.cpp
tasks/task_02/: readme.md
tasks/task_03/: readme.md
tasks/task_04/: readme.md
tasks/task_05/: readme.md
tasks/task_06/: readme.md
trunk/as0006102/task_06/: readme.md
trunk/as0006103/task_06/: readme.md
trunk/as0006104/task_01/src/MainFile/: CMakeLists.txt  main.cpp
trunk/as0006104/task_04/: readme.md
trunk/as0006107/doc/: readme.md
trunk/as0006107/src/: CMakeLists.txt  TMAU.cpp
trunk/as0006110/task_03/: readme.md
trunk/as0006110/task_04/: readme.md
trunk/as0006111/doc/: readme.md
trunk/as0006111/src/: CMakeLists.txt  timau1.cpp
trunk/as0006115/task_03/: README.md
trunk/as0006116/task_03/: readme.md
trunk/as0006116/task_04/: readme.md
trunk/as0006118/task_03/: readme.md
trunk/as0006202/task_03/: readme.md
trunk/as0006203/task_04/: readme.md
trunk/as0006209/task_01/: CmakeLists.txt.txt
trunk/as0006210/: readme.md
trunk/as0006214/doc/: readme.md
trunk/as0006217/task_06/: readme.md
trunk/as0006218/doc/: Doxygen.md  Readme.md  doxygendoc.md
trunk/as006110/task_01/src/Lab1/: CMakeLists.txt  Lab1.cpp  Lab1.h
(+391 files in other folders)
