# CMakeList.txt: проект CMake для Lab1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Lab1 "Lab1.cpp" "Lab1.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
